<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sarohaimg01"
    tools:context="activity.login">

    <TextView
        android:id="@+id/txvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText
        android:id="@+id/etxUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UserName"
        android:textColorHint="@color/varianlabelcolor"
        android:textColor="@color/mainlabelcolor"
        android:background="@drawable/bg_etxvarian"
        android:drawableStart="@drawable/person"
        android:drawableTint="@color/varianlabelcolor"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etxUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UserPassword"
        android:textColorHint="@color/varianlabelcolor"
        android:textColor="@color/mainlabelcolor"
        android:background="@drawable/bg_etxvarian"
        android:drawableStart="@drawable/security"
        android:drawableTint="@color/varianlabelcolor"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etxUserName"
        app:layout_constraintStart_toStartOf="@id/etxUserName"
        app:layout_constraintEnd_toEndOf="@id/etxUserName"/>

    <TextView
        android:id="@+id/txvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        android:textColor="@color/red"
        android:textStyle="bold|italic"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/etxUserPassword"
        app:layout_constraintEnd_toEndOf="@id/etxUserPassword"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="L o g i n"
        android:background="@drawable/bg_btnmain"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@id/txvForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/lnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/txvtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoPassword"
            android:textColor="@color/mainlabelcolor"
            android:layout_weight="1"
            android:gravity="right"/>

        <TextView
            android:id="@+id/txvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegisterNow"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textColor="@color/infodangercolor"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lnCopyRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CopyRight"
            android:textStyle="bold|italic"
            android:layout_alignParentLeft="true"
            android:textSize="10sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/mainlabelcolor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Author"
            android:textStyle="bold|italic"
            android:layout_alignParentRight="true"
            android:textSize="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/mainlabelcolor"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>