<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sarohaimg01"
    tools:context=".activity.register_form">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvRegisterFrm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegisterTitle"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etxNmUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserName"
            android:textColorHint="@color/varianlabelcolor"
            android:textColor="@color/mainlabelcolor"
            android:background="@drawable/bg_etxvarian"
            android:drawableStart="@drawable/person"
            android:drawableTint="@color/varianlabelcolor"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txvRegisterFrm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etxNmLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserLoginName"
            android:textColorHint="@color/varianlabelcolor"
            android:textColor="@color/mainlabelcolor"
            android:background="@drawable/bg_etxvarian"
            android:drawableStart="@drawable/person"
            android:drawableTint="@color/varianlabelcolor"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/etxNmUser"
            app:layout_constraintStart_toStartOf="@id/etxNmUser"
            app:layout_constraintEnd_toEndOf="@id/etxNmUser"/>

        <EditText
            android:id="@+id/etxEmailAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailAddress"
            android:inputType="textWebEmailAddress"
            android:textColorHint="@color/varianlabelcolor"
            android:textColor="@color/mainlabelcolor"
            android:background="@drawable/bg_etxvarian"
            android:drawableStart="@drawable/email"
            android:drawableTint="@color/varianlabelcolor"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/etxNmLogin"
            app:layout_constraintStart_toStartOf="@id/etxNmLogin"
            app:layout_constraintEnd_toEndOf="@id/etxNmLogin"/>

        <EditText
            android:id="@+id/etxNoPhone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PhoneNumber1"
            android:inputType="phone"
            android:textColorHint="@color/varianlabelcolor"
            android:textColor="@color/mainlabelcolor"
            android:background="@drawable/bg_etxvarian"
            android:drawableStart="@drawable/phone"
            android:drawableTint="@color/varianlabelcolor"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/etxEmailAdd"
            app:layout_constraintStart_toStartOf="@id/etxEmailAdd"
            app:layout_constraintEnd_toEndOf="@id/etxEmailAdd"/>

        <EditText
            android:id="@+id/etxNoPhone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PhoneNumber2"
            android:inputType="phone"
            android:textColorHint="@color/varianlabelcolor"
            android:textColor="@color/mainlabelcolor"
            android:background="@drawable/bg_etxvarian"
            android:drawableStart="@drawable/phone"
            android:drawableTint="@color/varianlabelcolor"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/etxNoPhone1"
            app:layout_constraintStart_toStartOf="@+id/etxNoPhone1"
            app:layout_constraintEnd_toEndOf="@+id/etxNoPhone1"/>

        <EditText
            android:id="@+id/etxPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserPassword"
            android:textColorHint="@color/varianlabelcolor"
            android:textColor="@color/mainlabelcolor"
            android:background="@drawable/bg_etxvarian"
            android:drawableStart="@drawable/security"
            android:drawableTint="@color/varianlabelcolor"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/etxNoPhone2"
            app:layout_constraintStart_toStartOf="@+id/etxNoPhone2"
            app:layout_constraintEnd_toEndOf="@+id/etxNoPhone2"/>

        <EditText
            android:id="@+id/etxPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserRetypePassword"
            android:textColorHint="@color/varianlabelcolor"
            android:textColor="@color/mainlabelcolor"
            android:background="@drawable/bg_etxvarian"
            android:drawableStart="@drawable/security"
            android:drawableTint="@color/varianlabelcolor"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/etxPassword1"
            app:layout_constraintStart_toStartOf="@+id/etxPassword1"
            app:layout_constraintEnd_toEndOf="@+id/etxPassword1"/>

        <Button
            android:id="@+id/btnSaveRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BtnUpdate"
            android:background="@drawable/bg_btnmain"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/etxPassword2"
            app:layout_constraintStart_toStartOf="@id/etxPassword2"
            app:layout_constraintEnd_toEndOf="@id/etxPassword2"/>

        <TextView
            android:id="@+id/txvReLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="L o g i n"
            android:textColor="@color/mainlabelcolor"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/btnSaveRegister"/>

        <RelativeLayout
            android:id="@+id/lnCopyRight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/txvReLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CopyRight"
                android:textStyle="bold|italic"
                android:layout_alignParentLeft="true"
                android:textSize="10sp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/mainlabelcolor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Author"
                android:textStyle="bold|italic"
                android:layout_alignParentRight="true"
                android:textSize="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/mainlabelcolor"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>